--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>IMF: Covert Intelligence Network</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.jpg" type="image/x-icon">
 </head>
 
 <body class="bg-gray-900 text-green-400 flex flex-col items-center justify-center min-h-screen p-4 relative">
